--- a/views/layouts/home.ejs
+++ b/views/layouts/home.ejs
@@ -33,6 +33,44 @@
     
     <%- include("./partials/scripts.ejs") %>
     <%- include("./partials/toggle-script.ejs") %>
+    <script>
+        function convertFD2JSON(formData) {
+                let obj = {};
+                for (let key of formData.keys()) {
+                    obj[key] = formData.get(key);
+                }
+                return obj;
+            }
+            document.querySelector("form").addEventListener("submit", handleForm);
+            function handleForm(ev) {
+                ev.preventDefault();
+                let myForm = ev.target;
+                fetch("/", {
+                    body: JSON.stringify(convertFD2JSON(new FormData(myForm))),
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json",
+                    }
+                }).then((some) => { return some.json() })
+                .then(async (res) => {
+                    const data = res;
+                    document.querySelector("#contact-notify").classList.remove("hidden");
+                    document.querySelector("#contact-notify").classList.add("text-green-700");
+                    document.querySelector("#contact-notify").innerText = data.message;
+                })
+                .catch((err) => {
+                    document.querySelector("#contact-notify").classList.remove("hidden");
+                    document.querySelector("#contact-notify").classList.add("text-red-700");
+                    document.querySelector("#contact-notify").innerText = err.message;
+                })
+            }
+            function delay () {
+                setInterval(() => {
+                    document.querySelector("#contact-notify").classList.add("hidden");
+                }, 5000);
+            }
+            delay();
+    </script>
 </body >
 
 </html >
