--- a/views/layouts/partials/links.ejs
+++ b/views/layouts/partials/links.ejs
@@ -4,6 +4,9 @@
 <!-- TailWind CSS Styles -->
 <link rel="stylesheet" href="/css/styles.css">
 
+<!-- JQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
 <!-- Font Awesome Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
