--- a/views/layouts/staff-dashboard.ejs
+++ b/views/layouts/staff-dashboard.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tailwind Starter Template - Day Admin Template: Tailwind Toolbox</title>
+    <title>Staff Dashboard</title>
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
 
