--- a/views/sections/footer.ejs
+++ b/views/sections/footer.ejs
@@ -6,7 +6,7 @@
                     <div class="footer-logo mb-3 flex justify-center">
                         <img class="rounded-full w-28 h-28" src="/img/logo-footer.jpg" alt="">
                     </div>
-                    <p class="text-gray-300 text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam
+                    <p class="text-gray-300 text-center">Lorem  abhi ipsum dolor sit amet, consectetur adipisicing elit. Quisquam
                         excepturi quasi, ipsam
                         voluptatem.</p>
                 </div>
