Change heart Symbol color in Footer

--- a/views/layouts/event-form.ejs
+++ b/views/layouts/event-form.ejs
@@ -211,7 +211,7 @@
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-1 text-center">
-                    <p class="text-white">Developed with ❤
+                    <p class="text-white">Developed with
                         <i class="fas fa-heart"></i> By <a class="text-white duration-300 hover:text-indigo-600"
                             href="#" rel="nofollow">Technical Team, E-Cell</a>
                     </p>
