--- a/views/layouts/event-form.ejs
+++ b/views/layouts/event-form.ejs
@@ -102,16 +102,16 @@
 
             <!-- Starting of the Image Section -->
 
-            <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
+            <div class="lg:max-w-lg lg:w-full md:w-5/12 w-5/6 mb-10 md:mb-0">
                 <img class="object-cover object-center rounded" alt="hero" src="/img/Registration-Form.png">
             </div>
 
 
-            <form class="max-w-sm mx-auto rounded-lg shadow-xl overflow-hidden p-6 space-y-10 ">
+            <form class="max-w-xs mx-auto md:w-4/6 rounded-lg shadow-xl overflow-hidden p-8 space-y-10 ">
                 <h2 class="text-2xl font-bold text-center">Registration Form</h2>
                 <div class="relative border-b-2 focus-within:border-blue-500">
                     <input type="text" name="FName" placeholder=" "
-                        class="block w-full appearance-none focus:outline-none bg-transparent" />
+                        class="block w-full appearance-none focus:outline-none bg-transparent " />
                     <label for="FName" class="absolute top-0 -z-1 duration-300 origin-0">First Name</label>
                 </div>
                 <div class="relative border-b-2 focus-within:border-blue-500">
@@ -130,10 +130,9 @@
                     <label for="crn" class="absolute top-0 -z-1 duration-300 origin-0">College Roll Number</label>
                 </div>
                 <div class="relative border-b-2 focus-within:border-blue-500">
-                    <input type="text" name="Registered Event" placeholder=" "
+                    <input type="text" name="collegeName" placeholder=" "
                         class="block w-full appearance-none focus:outline-none bg-transparent" />
-                    <label for="Registered Event" class="absolute top-0 -z-1 duration-300 origin-0">Registered
-                        Event</label>
+                    <label for="collegeName" class="absolute top-0 -z-1 duration-300 origin-0">College Name</label>
                 </div>
 
                 <button
