Navbar bug fixed

--- a/views/layouts/home-new.ejs
+++ b/views/layouts/home-new.ejs
@@ -62,7 +62,7 @@
                 <span class="toggler-icon"></span>
               </button>
               <div
-                class="absolute rounded left-0 z-20 hidden w-full px-5 py-3 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+                class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 py-3 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
                 id="navbarOne">
                 <ul id="nav"
                   class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
@@ -198,7 +198,7 @@
     </div>
   </section>
 
-  <section id="features" class="services-area pt-120">
+  <section id="features" class="services-area pt-16">
     <div class="container">
       <div class="justify-center row">
         <div class="w-full lg:w-2/3">
@@ -327,7 +327,7 @@
   </section>
 
 
-  <section id="team" class="team-area pt-120">
+  <section id="team" class="team-area pt-16">
     <div class="container">
       <div class="justify-center row">
         <div class="w-full lg:w-2/3">
