--- a/views/layouts/home-new.ejs
+++ b/views/layouts/home-new.ejs
@@ -772,7 +772,7 @@
         </div>
       </div>
       <div class="py-8 border-t border-gray-200">
-        <p class="text-white">
+        <p class="text-white text-center">
           Designed & Developed By <a class="duration-300 hover:text-red-400" href="#" rel="nofollow"
             target="_blank">Technical Team, E-Cell.</a>
         </p>
