--- a/views/layouts/home-new.ejs
+++ b/views/layouts/home-new.ejs
@@ -9,6 +9,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="icon" href="img/favicon.png" type="image/gif" sizes="16x16">
+
   <link rel="stylesheet" href="/css/animate.css">
 
   <link rel="stylesheet" href="/css/magnific-popup.css">
