--- a/views/layouts/home-new.ejs
+++ b/views/layouts/home-new.ejs
@@ -64,7 +64,7 @@
                 <span class="toggler-icon"></span>
               </button>
               <div
-                class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 py-3 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+                class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
                 id="navbarOne">
                 <ul id="nav"
                   class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
@@ -634,8 +634,8 @@
           </div>
           <div class="w-full lg:w-1/2">
             <div class="mt-12 subscribe-form">
-              <form action="#" class="relative focus:outline-none">
-                <input type="email" placeholder="Enter eamil"
+              <form action="/newsletter-sub" method="POST" class="relative focus:outline-none">
+                <input type="email" name="email" placeholder="Enter eamil"
                   class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
                 <button
                   class="inline-block absolute right-0 px-5 font-semibold text-white duration-200 rounded-r hover:shadow-xl h-full bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 overflow-hidden">Subscribe</button>
