Padding top added for XL screen sizes

--- a/views/layouts/home-new.ejs
+++ b/views/layouts/home-new.ejs
@@ -137,7 +137,7 @@
   </header>
 
 
-  <section id="about" class="relative pt-20 about-area">
+  <section id="about" class="relative pt-20 xl:pt-48 about-area">
     <div class="container">
       <div class="row">
         <div class="w-full lg:w-1/2">
