added button to form.

--- a/views/layouts/event-form.ejs
+++ b/views/layouts/event-form.ejs
@@ -91,6 +91,9 @@
                         class="block w-full appearance-none focus:outline-none bg-transparent" />
                     <label for="collegeName" class="absolute top-0 -z-1 duration-300 origin-0">College Name</label>
                 </div>
+                <div>
+                    <button class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Submit</button>
+                </div>
             </form>
 
             <!-- End of the Form section-->
