final event form

--- a/views/layouts/event-form.ejs
+++ b/views/layouts/event-form.ejs
@@ -53,17 +53,17 @@
     <!-- End of the navbar -->
 
     <section class="text-gray-600 body-font relative">
-        <div class="container pt-24 mx-16 mr-16 flex sm:flex-nowrap flex-wrap">
+        <div class="container pt-24  mr-16 flex sm:flex-nowrap flex-wrap">
 
             <!-- Starting of the Image Section -->
 
-            <div class="lg:max-w-lg lg:w-full md:w-5/12 w-5/6 mb-10 md:mb-0">
+            <div class="lg:max-w-lg lg:w-full lg:ml-24 md:w-5/12 w-5/6 mb-10 md:mb-0">
                 <img class="object-cover object-center rounded" alt="hero" src="/img/Registration-Form.png">
             </div>
 
             <!-- End of the Image Section -->
              <!-- Starting of the Form section-->
-            <div class="lg:ml-16 ">
+            <div class="lg:ml-20 ">
             <form class="max-w-xs mx-16 md:w-4/6 bg-gray-100 rounded-lg shadow-xl overflow-hidden p-8 space-y-10 ">
                 <h2 class="text-2xl font-bold text-center">Registration Form</h2>
                 <div class="relative border-b-2 focus-within:border-blue-500">
