--- a/views/layouts/home-new.ejs
+++ b/views/layouts/home-new.ejs
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
 </head>
 
 <body>
@@ -47,7 +48,7 @@
     </div>
   </div>
 
-
+<!-- header section -->
   <header class="header-area">
     <div class="navbar-area ">
       <div class="container relative z-50">
@@ -136,7 +137,7 @@
     </div>
   </header>
 
-
+<!-- about us -->
   <section id="about" class="relative pt-20 xl:pt-48 about-area">
     <div class="container">
       <div class="row">
@@ -168,7 +169,7 @@
     </div>
   </section>
 
-
+<!-- vision -->
   <section class="relative pt-20 about-area">
     <div class="container">
       <div class="row">
@@ -200,6 +201,7 @@
     </div>
   </section>
 
+  <!-- features section -->
   <section id="features" class="services-area pt-16">
     <div class="container">
       <div class="justify-center row">
@@ -268,7 +270,7 @@
     </div>
   </section>
 
-
+<!-- facts section -->
   <section id="facts" class="pt-20 video-counter">
     <div class="container">
       <div class="row">
@@ -328,7 +330,7 @@
     </div>
   </section>
 
-
+<!-- Team section -->
   <section id="team" class="team-area pt-16">
     <div class="container">
       <div class="justify-center row">
@@ -438,6 +440,7 @@
     </div>
   </section>
 
+  <!-- Brand section -->
   <div class="py-5 pb-5 mt-10 py-auto brand-area">
     <div class="container">
       <div class="row">
@@ -617,11 +620,11 @@
     </div>
   </section>
 
-
+  <!--subscribe and footer section -->
   <footer id="footer" class="relative z-10 footer-area pt-2">
     <div class="footer-bg" style="background-image: url(/img/footer-bg.svg);"></div>
     <div class="container">
-      <div class="px-6 pt-5 pb-5 mb-10 bg-white rounded-lg shadow-xl md:px-12 subscribe-area wow fadeIn"
+      <div class="px-6 pt-5 pb-5 mb-10 bg-white rounded-lg shadow-2xl md:px-12 subscribe-area wow fadeIn"
         data-wow-duration="1s" data-wow-delay="0.5s">
         <div class="flex flex-col justify-center items-center">
           <div class="w-full lg:w-1/2">
