Homepage -> Hero section -> Centering bug on extra large screen fixed

--- a/views/layouts/home-new.ejs
+++ b/views/layouts/home-new.ejs
@@ -98,36 +98,37 @@
       </div>
     </div>
     <div id="home" class="header-hero relative sm:h-screen">
-      <svg class="absolute bottom-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <svg class="absolute bottom-0 z-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#ffffff" fill-opacity="1"
           d="M0,192L48,202.7C96,213,192,235,288,208C384,181,480,107,576,106.7C672,107,768,181,864,186.7C960,192,1056,128,1152,138.7C1248,149,1344,235,1392,277.3L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
         </path>
       </svg>
-
-      <div class="container absolute">
-        <div class="justify-center row">
-          <div class="w-full lg:w-2/3">
-            <div class="pt-32 mb-12 text-center lg:pt-48 header-hero-content">
-              <h3 class="text-4xl font-light leading-tight text-white header-sub-title wow fadeInUp"
-                data-wow-duration="1.3s" data-wow-delay="0.2s">Guru Nanak Dev <span>Engineering
-                  College</span></h3>
-              <h2 class="mb-3 text-4xl font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
-                data-wow-delay="0.5s">Entrepreneurship Cell</h2>
-              <p class="mb-8 text-white text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
-                "Don't let the
-                noise of other's opinions drown out your own inner voice."
-                <br>- Steve Jobs
-              </p>
-              <a href="#about"
-                class="scroll-page bg-gray-200 text-black hover:bg-white hover:shadow-xl duration-200 p-3 rounded font-semibold wow fadeInUp"
-                data-wow-duration="1.3s" data-wow-delay="1.1s">Get Started</a>
+      <div class="w-full h-screen z-50">
+        <div class="container flex w-full flex-col justify-center">
+          <div class="justify-center row">
+            <div class="w-full lg:w-2/3">
+              <div class="pt-32 mb-12 text-center lg:pt-48 header-hero-content">
+                <h3 class="text-4xl font-light leading-tight text-white header-sub-title wow fadeInUp"
+                  data-wow-duration="1.3s" data-wow-delay="0.2s">Guru Nanak Dev <span>Engineering
+                    College</span></h3>
+                <h2 class="mb-3 text-4xl font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
+                  data-wow-delay="0.5s">Entrepreneurship Cell</h2>
+                <p class="mb-8 text-white text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
+                  "Don't let the
+                  noise of other's opinions drown out your own inner voice."
+                  <br>- Steve Jobs
+                </p>
+                <a href="#about"
+                  class="scroll-page bg-gray-200 text-black hover:bg-white hover:shadow-xl duration-200 p-3 rounded font-semibold wow fadeInUp"
+                  data-wow-duration="1.3s" data-wow-delay="1.1s">Get Started</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="justify-center row">
-          <div class="w-full lg:w-2/3">
-            <div class="text-center header-hero-image wow fadeIn" data-wow-duration="1.3s" data-wow-delay="1.4s">
-              <img class="rounded-lg" src="/img/hero-steve.jpg" alt="hero">
+          <div class="justify-center row z-50">
+            <div class="w-full lg:w-2/3">
+              <div class="text-center header-hero-image wow fadeIn" data-wow-duration="1.3s" data-wow-delay="1.4s">
+                <img class="rounded-lg" src="/img/hero-steve.jpg" alt="hero">
+              </div>
             </div>
           </div>
         </div>
@@ -137,7 +138,7 @@
   </header>
 
 
-  <section id="about" class="relative pt-20 xl:pt-48 about-area">
+  <section id="about" class="relative pt-5 xl:pt-20 2xl:pt-48 about-area">
     <div class="container">
       <div class="row">
         <div class="w-full lg:w-1/2">
