--- a/views/layouts/home-new.ejs
+++ b/views/layouts/home-new.ejs
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-
+  <!-- Hidden Loader -->
   <div class="hidden preloader">
     <div class="loader">
       <div class="ytp-spinner">
@@ -46,9 +46,11 @@
       </div>
     </div>
   </div>
+  <!-- Hidden Loader -->
 
-
+  <!-- Navbar Section -->
   <header class="header-area">
+    <!-- Navbar Section -->
     <div class="navbar-area ">
       <div class="container relative z-50">
         <div class="row">
@@ -97,6 +99,8 @@
         </div>
       </div>
     </div>
+    <!-- Navbar Section -->
+    <!-- Hero Section -->
     <div id="home" class="header-hero relative sm:h-screen">
       <svg class="absolute bottom-0 z-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#ffffff" fill-opacity="1"
@@ -133,11 +137,14 @@
           </div>
         </div>
       </div>
+      <!-- Particle.js Effect -->
       <div id="particles-1" class="particles"></div>
     </div>
+    <!-- Hero Section -->
   </header>
 
 
+  <!-- About Section - #1 -->
   <section id="about" class="relative pt-5 xl:pt-20 2xl:pt-48 about-area">
     <div class="container">
       <div class="row">
@@ -170,6 +177,7 @@
   </section>
 
 
+  <!-- About Section - #2 -->
   <section class="relative pt-20 about-area">
     <div class="container">
       <div class="row">
@@ -201,6 +209,8 @@
     </div>
   </section>
 
+
+  <!-- Features Section -->
   <section id="features" class="services-area pt-16">
     <div class="container">
       <div class="justify-center row">
@@ -268,8 +278,10 @@
       </div>
     </div>
   </section>
+  <!-- Features Section -->
 
 
+  <!-- Video & Stats Section -->
   <section id="facts" class="pt-20 video-counter">
     <div class="container">
       <div class="row">
@@ -328,8 +340,10 @@
       </div>
     </div>
   </section>
+  <!-- Video & Stats Section -->
 
 
+  <!-- Team Section -->
   <section id="team" class="team-area pt-16">
     <div class="container">
       <div class="justify-center row">
@@ -438,6 +452,8 @@
       </div>
     </div>
   </section>
+  <!-- Team Section -->
+
 
   <div class="py-5 pb-5 mt-10 py-auto brand-area">
     <div class="container">
@@ -464,8 +480,10 @@
       </div>
     </div>
   </div>
+  <!-- Brand Section -->
 
 
+  <!-- Testimonial Section -->
   <section id="testimonial" class="testimonial-area my-24 pt-22">
     <div class="container">
       <div class="justify-center row">
@@ -617,11 +635,14 @@
       </div>
     </div>
   </section>
+  <!-- Testimonial Section -->
 
 
+  <!-- Footer Section -->
   <footer id="footer" class="relative z-10 footer-area pt-2">
     <div class="footer-bg" style="background-image: url(/img/footer-bg.svg);"></div>
     <div class="container">
+      <!-- Newsletter Section -->
       <div class="px-6 pt-5 pb-5 mb-10 bg-white rounded-lg shadow-xl md:px-12 subscribe-area wow fadeIn"
         data-wow-duration="1s" data-wow-delay="0.5s">
         <div class="flex flex-col justify-center items-center">
@@ -645,6 +666,7 @@
           </div>
         </div>
       </div>
+      <!-- Newsletter Section -->
       <div class="footer-widget pb-24">
         <div class="row">
           <div class="w-4/5 md:w-3/5 lg:w-2/6">
@@ -749,6 +771,8 @@
     </div>
     <div id="particles-2" class="particles"></div>
   </footer>
+  <!-- Footer Section -->
+
 
 
   <a href="#" class="back-to-top"><i class="lni lni-chevron-up"></i></a>
